fixing site title on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,8 +24,8 @@
     }
 
     @include media-query($on-palm) {
-        font-size: 20px;
-        line-height: 20px;
+        font-size: 30px;
+        line-height: 40px;
     }
 
 }
